[metadata]
name = run-hw-server
# version = see setup.
author = UW Madison CMS
author_email = uwhepfpga@hep.wisc.edu
keywords = Xilinx
license = RESERVED
url = https://github.com/uwcms/run_hw_server
description = A wrapper for hw_server that assigns unique ports per user.
long_description = A wrapper for hw_server that assigns unique ports per user.

[options]
scripts = run_hw_server
